# ticket-triage-v1

./: Dockerfile  README.md  __init__.py  client.py  index.html  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  environment.py  models.py  tasks.py
